# lts

./: CMakeLists.txt  README.md
creators/lot/: testLotCreator.c
creators/terrain/: testTerrainCreator.c
documentation/: FileFormats.md  Objects.md
include/lts/: aliases.hpp  main.hpp
include/lts/map/: changeabilitymap.hpp  lot.hpp  objectlocation.hpp  storey.hpp  terrainmap.hpp  tilealignedboundingbox.hpp
include/lts/scene/: lotscenenode.hpp  storeyscenenode.hpp
src/: main.cpp
src/map/: changeabilitymap.cpp  lot.cpp  objectlocation.cpp  storey.cpp  terrainmap.cpp  tilealignedboundingbox.cpp
src/scene/: lotscenenode.cpp  storeyscenenode.cpp
testdata/: objects  person.blend  shelf_cheap.blend
testdata/models/: person.3ds  shelf_cheap.3ds
testdata/testlot/: 128  core.lot  testfile.ter
